# lakehouse_workspace

./: README.md  docker-compose.yml  main.py  pyproject.toml
data/bronze/test_spark/: .part-00000-5aa25219-a029-4c32-8d65-976d01ae418b-c000.snappy.parquet.crc  .part-00001-13ac36a3-213b-4fa1-8c26-f3f997cf6927-c000.snappy.parquet.crc  .part-00002-1a21da3a-a073-40aa-9df7-c7e49a5d41d6-c000.snappy.parquet.crc  .part-00003-87a29fc6-32ef-4334-914d-6aed43a34c18-c000.snappy.parquet.crc  .part-00004-1321f133-7326-4d74-b5ac-1e7da9066549-c000.snappy.parquet.crc  .part-00005-c654ebea-3e10-4d7d-90ca-fa6468788a9b-c000.snappy.parquet.crc  .part-00006-bbcd807f-968f-4374-b331-51e0b97827db-c000.snappy.parquet.crc  .part-00007-df407b99-f563-41ec-9a90-de87a155fc40-c000.snappy.parquet.crc  .part-00008-843fc43b-38bc-4ee5-8e0b-3b6b86d2c782-c000.snappy.parquet.crc  .part-00009-c1261d3a-31f8-4acc-a4cf-d2b571607269-c000.snappy.parquet.crc  .part-00010-8423d2e5-9c6a-4eaa-a94f-ba5e9bdcf0d9-c000.snappy.parquet.crc  part-00000-5aa25219-a029-4c32-8d65-976d01ae418b-c000.snappy.parquet  part-00001-13ac36a3-213b-4fa1-8c26-f3f997cf6927-c000.snappy.parquet  part-00002-1a21da3a-a073-40aa-9df7-c7e49a5d41d6-c000.snappy.parquet  part-00003-87a29fc6-32ef-4334-914d-6aed43a34c18-c000.snappy.parquet  part-00004-1321f133-7326-4d74-b5ac-1e7da9066549-c000.snappy.parquet  part-00005-c654ebea-3e10-4d7d-90ca-fa6468788a9b-c000.snappy.parquet  part-00006-bbcd807f-968f-4374-b331-51e0b97827db-c000.snappy.parquet  (+4 more)
docker/spark/: Dockerfile
notebooks/: test_spark.ipynb
src/lakehouse/configs/: paths.py
(+4 files in other folders)
