[project]
name = "lakehouse-workspace"
version = "0.1.0"
description = "This is my home lab"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "apache-airflow>=3.2.2",

    "boto3>=1.43.30",

    "delta-spark==4.1.0",

    "duckdb>=1.5.3",

    "ipykernel>=7.3.0",

    "pyarrow>=24.0.0",

    "pyspark==4.0.1",

    "s3fs>=0.4.2",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"